undeploy revision methods added

--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -31,3 +31,5 @@ API.LIST.ORDERBY = asc
 # JSON file path
 # Path to the JSON file containing tenant-specific consumer key and secret pairs
 JSON.FILE.PATH = tenants.json
+
+REVISIONLIST.FILE.PATH = revisions.json
